# secret-business-card-workshop

./: contract.wasm
contract/: Cargo.toml  contract.wasm
contract/src/: contract.rs  msg.rs  state.rs  testing.rs
ipfs/: package-lock.json  package.json  put-files.js
node/: index.js  package-lock.json  package.json
react-scrt-business-card/: App.js
react-scrt-business-card/src/: App.js  backend.js
react-scrt-business-card/src/components/: CreateCard.js
react-scrt-business-card/src/pages/: MyCards.js
